--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!--Created By: Florenz L. Deonila-->
-<!--BSIT-107-->
-<!--Date Created October 9, 2023-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Homepage | Florenz L. Deonila</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <style>
         html {
             scroll-behavior: smooth;
@@ -27,6 +24,7 @@
             padding-top: 15px;
             padding-bottom: 15px;
             list-style-type: none;
+            flex-wrap: wrap;
         }
 
         .topnav a {
@@ -95,6 +93,8 @@
             margin: 10px;
             border: 2px solid #000;
             padding: 5px;
+            width: 30%;
+            height: auto;
         }
 
         .gallery {
@@ -140,11 +140,74 @@
             background-color: #a8a8a8;
             color: #ffffff;
         }
+
+        /* RESPONSIVE STYLES */
+        @media (max-width: 768px) {
+            .topnav {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .topnav a {
+                padding: 12px 10px;
+                font-size: 16px;
+            }
+
+            .header {
+                height: auto;
+                padding: 60px 20px;
+            }
+
+            .overlay {
+                width: 100%;
+                padding: 30px 20px;
+            }
+
+            .overlay img {
+                width: 150px;
+                height: 150px;
+            }
+
+            .about {
+                flex-direction: column;
+                padding: 60px 20px;
+            }
+
+            .content, .about-image {
+                width: 100%;
+                padding: 20px;
+                text-align: center;
+            }
+
+            .about-image img {
+                width: 90%;
+            }
+
+            .My-Gallery img {
+                width: 100%;
+                height: auto;
+            }
+
+            .gallery {
+                float: none;
+                width: 100%;
+                margin: 10px 0;
+            }
+
+            .gallery img {
+                width: 100%;
+                height: auto;
+            }
+
+            .desc h3 {
+                font-size: 16px;
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
 
-    <!-- Navigation -->
     <div class="topnav">
         <li><a href="#">Home</a></li>
         <li><a href="#about-myself">About Myself</a></li>
@@ -152,7 +215,6 @@
         <li><a href="#responsive">Hobbies and Interest</a></li>
     </div>
 
-    <!-- Header Section -->
     <div class="header">
         <div class="overlay">
             <img src="img/yhang.img.jpg" alt="profile-picture" width="200px" height="200px" style="border-radius: 100px; border: 2px solid #ffffff">
@@ -162,7 +224,6 @@
         </div>
     </div>
 
-    <!-- About Myself Section -->
     <div class="about" id="about-myself">
         <div class="content">
             <h1 style="text-transform: uppercase;">About Myself</h1>
@@ -173,20 +234,18 @@
         </div>
     </div>
 
-    <!-- My Gallery Section -->
     <div class="My-Gallery" id="My-Gallery">
         <div class="context">
             <h1 style="text-transform: uppercase;" align="center">My Gallery</h1>
-            <img src="img/p1.jpg" alt="my-gallery" height="40%" width="30%">
-            <img src="img/p2.jpg" alt="My-Gallery" height="40%" width="30%">
-            <img src="img/p3.jpg" alt="My-Gallery" height="40%" width="30%">
-            <img src="img/p4.jpg" alt="My-Gallery" height="40%" width="30%">
-            <img src="img/p5.jpg" alt="My-Gallery" height="40%" width="30%">
-            <img src="img/p6.jpg" alt="My-gallery" height="40%" width="30%">
+            <img src="img/p1.jpg" alt="my-gallery">
+            <img src="img/p2.jpg" alt="My-Gallery">
+            <img src="img/p3.jpg" alt="My-Gallery">
+            <img src="img/p4.jpg" alt="My-Gallery">
+            <img src="img/p5.jpg" alt="My-Gallery">
+            <img src="img/p6.jpg" alt="My-gallery">
         </div>
     </div>
 
-    <!-- Hobbies Section -->
     <div class="hobbies" id="responsive">
         <h1 style="text-transform: uppercase;" align="center">Hobbies and Interest</h1>
     </div>
