--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Homepage | Florenz L. Deonila</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <style>
         html {
             scroll-behavior: smooth;
@@ -20,20 +20,23 @@
             display: flex;
             justify-content: center;
             background-color: #070910;
-            overflow: hidden;
-            padding-top: 15px;
-            padding-bottom: 15px;
-            list-style-type: none;
             flex-wrap: wrap;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .topnav li {
+            display: inline-block;
         }
 
         .topnav a {
+            display: block;
             color: #f2f2f2;
-            text-align: center;
-            padding: 14px 30px;
+            padding: 14px 20px;
             text-decoration: none;
             font-size: 17px;
-            transition: 0.5s;
+            transition: 0.3s;
         }
 
         .topnav a:hover {
@@ -43,105 +46,93 @@
 
         .header {
             background-image: url("img/fresstock.jpg.jpg");
-            background-repeat: no-repeat;
             background-size: cover;
-            background-position: bottom;
-            height: 500px;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: auto;
             display: grid;
-            padding: 100px 50px;
+            padding: 80px 20px;
         }
 
         .overlay {
             place-self: center;
             background-color: rgba(0,0,0,0.9);
+            color: #fff;
             text-align: center;
-            color: #ffffff;
-            padding: 50px;
-            width: 80%;
+            padding: 40px;
+            max-width: 800px;
+            width: 100%;
+        }
+
+        .overlay img {
+            width: 180px;
+            height: 180px;
+            border-radius: 100px;
+            border: 2px solid #fff;
         }
 
         .about {
-            padding: 120px 0px;
             display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 60px 20px;
             background-color: #111211;
-            color: #fff;
+            color: white;
         }
 
         .content {
-            place-self: center;
-            text-align: left;
-            line-height: 22px;
-            padding: 50px 50px;
-            width: 50%;
-            letter-spacing: 0.8px;
+            flex: 1 1 300px;
+            padding: 20px;
+            max-width: 600px;
         }
 
         .about-image img {
-            width: 600px;
-            height: auto;
-            object-fit: cover;
-            border: 2px solid #000000;
+            width: 100%;
+            max-width: 400px;
+            padding: 20px;
         }
 
         .My-Gallery {
             background-color: #202020;
             color: #fff;
-            padding: 50px 20px;
+            padding: 40px 20px;
+            text-align: center;
         }
 
         .My-Gallery img {
+            width: 100%;
+            max-width: 300px;
             margin: 10px;
             border: 2px solid #000;
             padding: 5px;
-            width: 30%;
-            height: auto;
+        }
+
+        .hobbies {
+            background-color: #757575;
+            padding: 20px;
+            text-align: center;
         }
 
         .gallery {
-            margin: 5px;
-            border: 2px solid #000000;
-            float: left;
-            width: 620px;
-        }
-
-        .gallery:hover {
-            border: 2px solid #000000;
+            border: 2px solid #000;
+            margin: 20px auto;
+            max-width: 90%;
         }
 
         .gallery img {
-            width: 600px;
+            width: 100%;
             height: auto;
         }
 
         .desc {
             padding: 15px;
             text-align: center;
+            color: #000;
+            background: #fff;
         }
 
-        .hobbies {
-            display: flex;
-            justify-content: center;
-            background-color: #757575;
-            overflow: hidden;
-            padding-top: 15px;
-            padding-bottom: 15px;
-        }
-
-        .hobbies a {
-            color: #8a8a8a;
-            text-align: center;
-            padding: 14px 30px;
-            text-decoration: none;
-            font-size: 17px;
-            transition: 0.5s;
-        }
-
-        .hobbies a:hover {
-            background-color: #a8a8a8;
-            color: #ffffff;
-        }
-
-        /* RESPONSIVE STYLES */
+        /* Responsive Styles */
         @media (max-width: 768px) {
             .topnav {
                 flex-direction: column;
@@ -153,55 +144,30 @@
                 font-size: 16px;
             }
 
-            .header {
-                height: auto;
-                padding: 60px 20px;
-            }
-
             .overlay {
-                width: 100%;
-                padding: 30px 20px;
+                padding: 20px;
             }
 
             .overlay img {
-                width: 150px;
-                height: 150px;
+                width: 140px;
+                height: 140px;
             }
 
             .about {
                 flex-direction: column;
-                padding: 60px 20px;
-            }
-
-            .content, .about-image {
-                width: 100%;
-                padding: 20px;
                 text-align: center;
             }
 
             .about-image img {
-                width: 90%;
+                max-width: 90%;
             }
 
             .My-Gallery img {
-                width: 100%;
-                height: auto;
-            }
-
-            .gallery {
-                float: none;
-                width: 100%;
-                margin: 10px 0;
-            }
-
-            .gallery img {
-                width: 100%;
-                height: auto;
+                max-width: 90%;
             }
 
             .desc h3 {
-                font-size: 16px;
-                padding: 10px;
+                font-size: 15px;
             }
         }
     </style>
@@ -217,9 +183,9 @@
 
     <div class="header">
         <div class="overlay">
-            <img src="img/yhang.img.jpg" alt="profile-picture" width="200px" height="200px" style="border-radius: 100px; border: 2px solid #ffffff">
-            <h1 style="font-size: 45px;">Florenz L. Deonila</h1>
-            <h1>GRC Student</h1>
+            <img src="img/yhang.img.jpg" alt="profile-picture">
+            <h1>Florenz L. Deonila</h1>
+            <h2>GRC Student</h2>
             <p><h2>2023-08-01433</h2></p>
         </div>
     </div>
@@ -227,37 +193,35 @@
     <div class="about" id="about-myself">
         <div class="content">
             <h1 style="text-transform: uppercase;">About Myself</h1>
-            <p>Hi I am <b>Florenz L. Deonila</b>, <i>19 years old</i>, <i>I like Bicol, Adobo and etc</i>. I live in <i>Caloocan City</i>. I was born on <i>October 9, 2004</i> and <i>currently studying at Global Reciprocal College</i>, 1st Year College, Section IT-107 and I am currently a scholar. I just find myself happy with the simple things.</p>
+            <p>Hi I am <b>Florenz L. Deonila</b>, <i>19 years old</i>. I like Bicol, Adobo and more. I live in <i>Caloocan City</i>. I was born on <i>October 9, 2004</i> and I am currently studying at Global Reciprocal College, 1st Year College, Section IT-107 and I am currently a scholar. I just find myself happy with the simple things.</p>
         </div>
         <div class="about-image">
-            <img src="img/angry_Cat.img.jpg" alt="About-Photo">
+            <img src="img/angry_Cat.img.jpg" alt="About Photo">
         </div>
     </div>
 
     <div class="My-Gallery" id="My-Gallery">
-        <div class="context">
-            <h1 style="text-transform: uppercase;" align="center">My Gallery</h1>
-            <img src="img/p1.jpg" alt="my-gallery">
-            <img src="img/p2.jpg" alt="My-Gallery">
-            <img src="img/p3.jpg" alt="My-Gallery">
-            <img src="img/p4.jpg" alt="My-Gallery">
-            <img src="img/p5.jpg" alt="My-Gallery">
-            <img src="img/p6.jpg" alt="My-gallery">
-        </div>
+        <h1 style="text-transform: uppercase;">My Gallery</h1>
+        <img src="img/p1.jpg" alt="Gallery 1">
+        <img src="img/p2.jpg" alt="Gallery 2">
+        <img src="img/p3.jpg" alt="Gallery 3">
+        <img src="img/p4.jpg" alt="Gallery 4">
+        <img src="img/p5.jpg" alt="Gallery 5">
+        <img src="img/p6.jpg" alt="Gallery 6">
     </div>
 
     <div class="hobbies" id="responsive">
-        <h1 style="text-transform: uppercase;" align="center">Hobbies and Interest</h1>
+        <h1 style="text-transform: uppercase;">Hobbies and Interest</h1>
     </div>
 
-    <h1 style="text-transform: uppercase;" align="center">Hobbies</h1>
+    <h1 style="text-transform: uppercase; text-align: center;">Hobbies</h1>
 
     <div class="gallery">
         <a target="_blank" href="img/deonila1.jpg">
             <img src="img/deonila1.jpg" alt="Gaming">
         </a>
         <div class="desc">
-            <h3>Gaming is really a workout for your mind disguised as fun. Studies have shown that playing video games regularly may increase gray matter in the brain and boost brain connectivity. (Gray matter is associated with muscle control, memories, perception, and spatial navigation.)</h3>
+            <h3>Gaming is a workout for your mind. It may improve memory, perception, and spatial skills.</h3>
         </div>
     </div>
 
@@ -266,7 +230,7 @@
             <img src="img/deonila2.jpg" alt="Cooking">
         </a>
         <div class="desc">
-            <h3>Cooking is the process of producing safe and edible food by preparing and combining ingredients, and (in most cases) applying heat. Cooking is a means of processing food, without which many foods would be unfit for human consumption.</h3>
+            <h3>Cooking is the process of preparing food, often applying heat. It makes many foods safe to eat.</h3>
         </div>
     </div>
 
@@ -275,7 +239,7 @@
             <img src="img/deonila3.jpg" alt="Basketball">
         </a>
         <div class="desc">
-            <h3>Basketball is a game played between two teams of five players each on a rectangular court, usually indoors. Each team tries to score by tossing the ball through the opponent's goal, an elevated horizontal hoop and net called a basket.</h3>
+            <h3>Basketball is a team sport played on a court where players try to score by shooting a ball into a basket.</h3>
         </div>
     </div>
 
