--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
 
         .header {
-            background-image: url("img/fresstock.jpg.jpg");
+            background-image: url("img/fresstock.jpg .jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -56,8 +56,8 @@
 
         .overlay {
             place-self: center;
-            background-color: rgba(0,0,0,0.9);
-            color: #fff;
+            background-color: rgba(0, 0, 0, 0.9);
+            color: #ffffff;
             text-align: center;
             padding: 40px;
             max-width: 800px;
@@ -68,7 +68,7 @@
             width: 180px;
             height: 180px;
             border-radius: 100px;
-            border: 2px solid #fff;
+            border: 2px solid #ff0000;
         }
 
         .about {
@@ -94,7 +94,7 @@
         }
 
         .My-Gallery {
-            background-color: #202020;
+            background-color: #ffffff;
             color: #fff;
             padding: 40px 20px;
             text-align: center;
@@ -109,7 +109,7 @@
         }
 
         .hobbies {
-            background-color: #757575;
+            background-color: #919191;
             padding: 20px;
             text-align: center;
         }
@@ -129,10 +129,14 @@
             padding: 15px;
             text-align: center;
             color: #000;
-            background: #fff;
+            background: #ffffff;
+        }
+        desc h3 {
+            font-size: 18px;
+            margin: 0;
         }
 
-        /* Responsive Styles */
+
         @media (max-width: 768px) {
             .topnav {
                 flex-direction: column;
@@ -193,7 +197,7 @@
     <div class="about" id="about-myself">
         <div class="content">
             <h1 style="text-transform: uppercase;">About Myself</h1>
-            <p>Hi I am <b>Florenz L. Deonila</b>, <i>19 years old</i>. I like Bicol, Adobo and more. I live in <i>Caloocan City</i>. I was born on <i>October 9, 2004</i> and I am currently studying at Global Reciprocal College, 1st Year College, Section IT-107 and I am currently a scholar. I just find myself happy with the simple things.</p>
+            <p>Hi I am <b>Florenz L. Deonila</b>, <i>19 years old</i>. I like Bicol Expres, Adobo and more. I live in <i>Caloocan City</i>. I was born on <i>October 9, 2004</i> and I am currently studying at Global Reciprocal College, 3rd Year College, Section IT-304 and I am currently a scholar. I just find myself happy with the simple things.</p>
         </div>
         <div class="about-image">
             <img src="img/angry_Cat.img.jpg" alt="About Photo">
@@ -207,15 +211,17 @@
         <img src="img/p3.jpg" alt="Gallery 3">
         <img src="img/p4.jpg" alt="Gallery 4">
         <img src="img/p5.jpg" alt="Gallery 5">
-        <img src="img/p6.jpg" alt="Gallery 6">
+        <img src="img/1.png" alt="Gallery 6">
+        <img src="img/2.png" alt="Gallery 7">
+        <img src="img/3.png" alt="Gallery 8">
+        <img src="img/4.png" alt="Gallery 9">
+        <img src="img/5.png" alt="Gallery 9">
     </div>
 
     <div class="hobbies" id="responsive">
-        <h1 style="text-transform: uppercase;">Hobbies and Interest</h1>
-    </div>
-
-    <h1 style="text-transform: uppercase; text-align: center;">Hobbies</h1>
-
+        <h1 style="text-transform: uppercase;">Hobbies and Interest and Hobbies</h1>
+    </div>  
+    
     <div class="gallery">
         <a target="_blank" href="img/deonila1.jpg">
             <img src="img/deonila1.jpg" alt="Gaming">
