--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
             .about-image img {
                 max-width: 90%;
             }
-
+            .content {
+                padding: 10px;
+                max-width: 100%;
+            }
             .My-Gallery img {
                 max-width: 90%;
             }
@@ -197,7 +200,7 @@
     <div class="about" id="about-myself">
         <div class="content">
             <h1 style="text-transform: uppercase;">About Myself</h1>
-            <p>Hi I am <b>Florenz L. Deonila</b>, <i>20 years old</i>. I like Bicol Expres, Adobo and more. I live in <i>Caloocan City</i>. I was born on <i>October 9, 2004</i> and I am currently studying at Global Reciprocal College, 3rd Year College, Section IT-304 and I am currently a scholar. I just find myself happy with the simple things.</p>
+            <p>Hi I am <b>Florenz L. Deonila</b>, <i> years old</i>. I like Bicol Expres, Adobo and more. I live in <i>Caloocan City</i>. I was born on <i>October 9, 2004</i> and I am currently studying at Global Reciprocal College, 3rd Year College, Section IT-304 and I am currently a scholar. I just find myself happy with the simple things.</p>
         </div>
         <div class="about-image">
             <img src="img/angry_Cat.img.jpg" alt="About Photo">
